--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -4,6 +4,9 @@
 
 @layer components {
     .btn-primary {
-      @apply py-2 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md  hover:bg-secondary-light hover:text-primary-light focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md my-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    }
+    .input-primary {
+        @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light focus:border-transparent;
     }
   }
