--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,5 +10,17 @@
     }
     .input-primary {
         @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light focus:border-transparent;
+    }
+  }
+
+  @layer base {
+    h1 {
+      @apply text-3xl font-bold;
+    }
+    h2 {
+      @apply text-2xl font-bold;
+    }
+    h3 {
+      @apply text-xl font-bold;
     }
   }
