--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,11 +6,16 @@
 
 @layer components {
     .btn-main {
-        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none focus:bg-secondary-light focus:text-primary-light ;
     }
     .input-main {
         @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light focus:border-transparent;
     }
+
+    .btn-sec {
+        @apply py-3 px-4 bg-white text-black text-left font-medium border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-light hover:text-primary-dark focus:outline-none ;
+    }
+
   }
 
   @layer base {
