--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -13,7 +13,7 @@
     }
 
     .btn-sec {
-        @apply py-3 px-4 bg-white text-black text-left font-medium border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-light hover:text-primary-dark focus:outline-none ;
+        @apply py-3 px-4 bg-white text-black text-center font-medium h-14 border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-light hover:text-primary-dark focus:outline-none ;
     }
 
   }
