--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,7 +6,7 @@
 
 @layer components {
     .btn-main {
-        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none focus:bg-secondary-light focus:text-primary-light ;
+        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none ;
     }
     .input-main {
         @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light focus:border-transparent;
