--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -16,6 +16,14 @@
         @apply py-3 px-4 bg-white text-black text-center font-medium h-14 border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-light hover:text-primary-dark focus:outline-none ;
     }
 
+    .tab-active {
+        @apply shadow-float-down bg-white rounded-t-md text-center p-3 z-40 focus:outline-none
+    }
+
+    .tab-inactive {
+        @apply shadow-float-down-1 bg-white rounded-t-md text-center text-gray-300 p-3 z-10 transform translate-y-2 focus:outline-none hover:shadow-float-down-1-hover
+    }
+
   }
 
   @layer base {
