--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,14 +6,14 @@
 
 @layer components {
     .btn-main {
-        @apply py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none ;
+        @apply transition duration-200 ease-in-out py-3 px-4 bg-primary-light text-secondary-dark font-semibold rounded-md m-3 hover:bg-secondary-light hover:text-primary-light focus:outline-none ;
     }
     .input-main {
-        @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light focus:border-transparent;
+        @apply py-3 px-4 bg-graywhite-100 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-hover focus:border-transparent;
     }
 
     .btn-sec {
-        @apply py-3 px-4 bg-white text-black text-center font-medium h-14 border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-light hover:text-primary-dark focus:outline-none ;
+        @apply py-3 px-4 bg-white text-black text-center font-medium h-14 border-2 border-gray-600 rounded-md mt-2 hover:bg-primary-hover hover:text-gray-900 focus:outline-none ;
     }
 
     .tab-active {
@@ -21,7 +21,7 @@
     }
 
     .tab-inactive {
-        @apply shadow-float-down-1 bg-white rounded-t-md text-center text-gray-300 p-3 z-10 transform translate-y-2 focus:outline-none hover:shadow-float-down-1-hover
+        @apply transition duration-150 ease-out shadow-float-down-1 bg-white rounded-t-md text-center text-gray-300 p-3 z-10 transform translate-y-2 focus:outline-none hover:shadow-float-down-1-hover hover:text-gray-400
     }
 
   }
